--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.4",
+    "axios": "^0.18.0",
+    "final-form": "^4.4.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "native-base": "^2.3.10",
     "react": "16.3.0-alpha.1",
     "react-apollo": "^2.1.1",
+    "react-final-form": "^3.1.5",
     "react-native": "0.54.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-vector-icons": "^4.5.0"
