--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.4",
     "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
     "final-form": "^4.4.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
@@ -17,8 +18,11 @@
     "react-apollo": "^2.1.1",
     "react-final-form": "^3.1.5",
     "react-native": "0.54.3",
+    "react-native-pathjs-charts": "0.0.34",
     "react-native-router-flux": "^4.0.0-beta.28",
-    "react-native-vector-icons": "^4.5.0"
+    "react-native-svg": "^6.3.1",
+    "react-native-vector-icons": "^4.5.0",
+    "save": "^2.3.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
