--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google/maps": "^0.4.6",
     "apollo-boost": "^0.1.4",
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
@@ -18,11 +19,13 @@
     "react-apollo": "^2.1.1",
     "react-final-form": "^3.1.5",
     "react-native": "0.54.3",
+    "react-native-location": "^0.27.0",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-svg": "^6.3.1",
     "react-native-vector-icons": "^4.5.0",
-    "save": "^2.3.2"
+    "save": "^2.3.2",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
