--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "final-form": "^4.4.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
+    "lodash": "^4.17.10",
     "native-base": "^2.3.10",
     "react": "16.3.0-alpha.1",
     "react-apollo": "^2.1.1",
