--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "final-form": "^4.4.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
+    "lodash": "^4.17.10",
     "native-base": "^2.3.10",
     "react": "16.3.0-alpha.1",
     "react-apollo": "^2.1.1",
     "react-final-form": "^3.1.5",
     "react-native": "0.54.3",
     "react-native-location": "^0.27.0",
-    "react-native-pathjs-charts": "0.0.34",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-svg": "^6.3.1",
     "react-native-vector-icons": "^4.5.0",
     "save": "^2.3.2",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "victory-native": "^0.17.4"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
